<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">

                <RadioGroup
                    android:id="@+id/radioGroupChoix"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <RadioButton
                        android:id="@+id/radioButtonVeste"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/veste" />

                    <RadioButton
                        android:id="@+id/radioButtonPantalon"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/pantalon" />

                    <RadioButton
                        android:id="@+id/radioButtonTShirt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tshirt" />
                </RadioGroup>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/buttonPlus"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/plus" />

                    <EditText
                        android:id="@+id/editTextNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:gravity="center_horizontal"
                        android:inputType="number"
                        android:text="@string/defEdit" />

                    <Button
                        android:id="@+id/buttonMinus"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/minus" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonAdd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/add" />

                <Button
                    android:id="@+id/buttonRemove"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/remove" />
            </LinearLayout>

            <Button
                android:id="@+id/buttonPay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pay" />

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:id="@+id/linearScroll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"/>
        </ScrollView>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>